force-app/main/UtilityComponents/aiFormBuilder/objects/Form_Response__c/Form_Response__c.object-meta.xml
<CustomObject>
    <label>Form Response</label>
    <pluralLabel>Form Responses</pluralLabel>
    <nameField>
        <label>Response Number</label>
        <type>AutoNumber</type>
        <displayFormat>FR-{000000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Stores submitted responses for dynamically generated forms</description>
</CustomObject>