force-app/main/UtilityComponents/aiFormBuilder/objects/Form_Response__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Response status</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value><fullName>Draft</fullName><default>true</default><label>Draft</label></value>
            <value><fullName>Submitted</fullName><label>Submitted</label></value>
            <value><fullName>Approved</fullName><label>Approved</label></value>
            <value><fullName>Rejected</fullName><label>Rejected</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>