force-app/main/UtilityComponents/aiFormBuilder/objects/Form_Response__c/fields/Submitted_JSON__c.field-meta.xml
<CustomField>
    <fullName>Submitted_JSON__c</fullName>
    <description>Captured form data as JSON</description>
    <label>Submitted JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>