force-app/main/UtilityComponents/aiFormBuilder/objects/Form_Response__c/fields/Template__c.field-meta.xml
<CustomField>
    <fullName>Template__c</fullName>
    <description>Template used for this response</description>
    <label>Template</label>
    <referenceTo>Form_Template__c</referenceTo>
    <relationshipLabel>Responses</relationshipLabel>
    <relationshipName>Responses</relationshipName>
    <type>Lookup</type>
</CustomField>